<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project2.csc214.login.SignupPart2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/male"
                android:id="@+id/male_radio_button"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female_radio_button"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white" />

        </RadioGroup>

        <EditText
            android:id="@+id/enter_hometown_slot"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/hometown"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="#FFF" />

        <EditText
            android:id="@+id/enter_bio_slot"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:hint="@string/write_a_short_bio_here"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signup_cancel_button2"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/join_button"
                android:layout_width="110dp"
                android:layout_height="50dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/Hooli.Button"
                android:text="@string/join_hooli"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
