<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="#FFF"
    tools:context="project2.csc214.profile.ProfileAboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/my_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/bio_n"/>

        <TextView
            android:id="@+id/my_profile_hometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/black"
            android:text="@string/hometown_colon"/>

        <TextView
            android:id="@+id/my_profile_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/black"
            android:text="@string/birthday_colon"/>

        <TextView
            android:id="@+id/my_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/black"
            android:text="@string/gender_colon"/>

        </LinearLayout>

</ScrollView>
