<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="project2.csc214.profile.NewPostActivity">

    <EditText
        android:id="@+id/new_post_edit_text"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="25sp"
        android:hint="@string/type_your_post_here"/>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_post_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/new_post_add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"/>

        <Button
            android:id="@+id/new_post_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Hooli.Button"
            android:text="@string/post"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/new_post_image_view"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp" />

</LinearLayout>
