<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context="project2.csc214.profile.MyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/my_profile_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:text="@string/firstname_lastname" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/my_profile_picture"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/empty_profile"
                android:contentDescription="@string/profile_picture" />

            <Button
                android:padding="0dp"
                android:id="@+id/change_profile_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:textColor="#FFF"
                android:backgroundTint="@color/hooliBlue"
                android:layout_toEndOf="@id/my_profile_picture"
                android:text="@string/take_new_npicture"/>

            <Button
                android:id="@+id/new_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:textColor="#FFF"
                android:backgroundTint="@color/hooliBlue"
                android:layout_toStartOf="@id/my_profile_picture"
                android:text="@string/new_post"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_profile_posts_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="@color/hooliBlue"
            android:text="@string/posts"/>

        <TextView
            android:id="@+id/my_profile_about_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:text="@string/about"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/my_profile_view_pager_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <android.support.v4.view.ViewPager
            android:id="@+id/my_profile_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</LinearLayout>
